# jaraco.develop

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README  README.rst  README.txt  close-inactive-branches.py  conftest.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  todo.txt  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst  index.txt
jaraco/develop/: __init__.py  _towncrier.toml  add-github-secret.py  add-github-secrets.py  add-project.py  bitbucket.py  checkout-all.py  compiler.py  cpython-sync.py  create-github-release.py  env_tool.py  environ.py  environments.py  filters.py  finalize.py  git.py  github.py  indent.py  init-azure.py  lib2to3.py  macos-build-python.py  mercurial.py  merge.py  migrate-config.py  msvc.py  namespace.py  package.py  patch.py  print-meta.py  projects-run.py  projects.txt  py36compat.py  pypi.py  python.py  remove-namespace.py  repo.py  rst-header-replace.py  rtd.py  selenium.py  setup template.py  (+8 more)
jaraco/develop/compat/: py38.py
newsfragments/: +01afd4cd.feature.rst  +046cf41c.feature.rst  +1209889c.feature.rst  +179a9fe6.bugfix.rst  +1a5cb295.bugfix.rst  +1f3ebcc4.feature.rst  +20ce5367.bugfix.rst  +25e5b97a.feature.rst  +2902822a.bugfix.rst  +32656a99.feature.rst  +3e9d110c.feature.rst  +5a5e199f.bugfix.rst  +66c1d16a.feature.rst  +6bb5135e.feature.rst  +800f4297.feature.rst  +8c81e524.feature.rst  +8eaad5eb.feature.rst  +95ea50f9.bugfix.rst  +a8597e5f.bugfix.rst  +adb82e1a.feature.rst  +b1c2300b.feature.rst  +b23df31f.feature.rst  +b2ad2a09.bugfix.rst  +b9d13ee1.feature.rst  +bb5f4be3.bugfix.rst  +bb92e54d.feature.rst  +bee94c96.bugfix.rst  +c3b5846a.bugfix.rst  +cb111e22.bugfix.rst  +cb86fac7.feature.rst  +d1ee967f.feature.rst  +d456c54b.bugfix.rst  +d66bf8c2.removal.rst  +dc04d32d.bugfix.rst  +f58f59dc.bugfix.rst  16.feature.rst  19.feature.rst  21.feature.rst  23.bugfix.rst  26.bugfix.rst  (+3 more)
scripts/: lxml-build.py  move-repo.py  test-python-symlink-patch.py
tests/: test_towncrier.py
