[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.develop"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Development utilities by jaraco"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
	"jaraco.ui >= 2.4",
	"jaraco.context",
	"keyring",
	"requests-toolbelt",
	"PyNaCl",
	"packaging",
	"setuptools",
	"path",
	"jaraco.vcs >= 1.1",
	"build",
	"subprocess-tee",
	"requests-file",
	"requests",
	"ini2toml[full]",
	"jaraco.packaging >= 10",
	"typer",
	"typing-extensions",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/jaraco.develop"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"types-requests",
	"pytest-home",
	"towncrier",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 2.2",
]

type = [
	# upstream
	"pytest-mypy",

	# local
	"types-setuptools",
]


[tool.setuptools_scm]
