[metadata]
name = jaraco.develop
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Development utilities by jaraco
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.develop
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.9
install_requires =
	jaraco.ui
	jaraco.context
	jaraco.collections
	keyring
	autocommand
	requests-toolbelt
	PyNaCl
	packaging
	setuptools
	path
	jaraco.vcs >= 1.1
	build
	subprocess-tee

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	pytest-subprocess
	types-requests

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
